--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,7 +26,7 @@
 
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="results" class="analysis"></div>
             </section>
         </main>
 
