--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -2,4 +2,15 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 10px 40px;
+    background-color: black;
+    color: white;
+
+    .logo {
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    .navigation {
+        text-transform: capitalize;
+    }
 }
