--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -2,36 +2,37 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title>Test</title>
+        <title>News Analyzer</title>
     </head>
 
     <body>
 
         <header>
             <div class="logo">
-                Logo
+                News Analyzer
             </div>
             <div class="navigation">
-                navigation
+                <a href="#">About</a>
             </div>
         </header>
 
         <main>
             <section>
                 <form class="form" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input id="name" type="text" name="input" value="" placeholder="Enter some URL or text to analyze">
+                    <input type="submit" name="" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             <section>
 
             <section>
-                <strong>Form Results:</strong>
+                <strong>Analysis Results:</strong>
                 <div id="results" class="analysis"></div>
             </section>
         </main>
 
         <footer>
-            <p>This is a footer</p>
+            <p>&copy; Pablo Asencio Sánchez</p>
+            <p>Powered by <a href="https://www.meaningcloud.com/">Meaning Cloud</a></p>
         </footer>
 
     </body>
