feat: Remove Analysis Results title from initial view

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,7 +25,7 @@
             <section>
 
             <section>
-                <strong>Analysis Results:</strong>
+                <strong></strong>
                 <div id="results" class="analysis"></div>
             </section>
         </main>
