feat: Style footer, links and results title

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -13,3 +13,13 @@ section {
     max-width: 800px;
     margin: 50px auto;
 }
+
+a,
+a:visited {
+    color: inherit;
+}
+
+strong {
+    font-size: 1.6rem;
+    font-weight: 700;
+}
