--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,9 +18,9 @@
 
         <main>
             <section>
-                <form class="form" onsubmit="return Client.handleSubmit(event)">
+                <form class="form" onsubmit="return Client.handleSubmit(event)" id="form">
                     <input id="name" type="text" name="input" value="" placeholder="Enter some URL or text to analyze">
-                    <input type="submit" name="" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
+                    <input type="submit" name="" value="Analyze" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)" id="submit">
                 </form>
             <section>
 
