--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,6 +18,7 @@
 
         <main>
             <section>
+                <p id="errorMessage" class="error"></p>
                 <form class="form" id="form">
                     <input id="name" type="text" name="input" value="" placeholder="Enter some URL or text to analyze">
                     <input type="submit" name="" value="Analyze" id="submit">
